--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,16 @@ dependencies {
 //    implementation("io.jsonwebtoken:jjwt-api:0.11.2")
 //    implementation("io.jsonwebtoken:jjwt-impl:0.11.2")
 //    runtimeOnly("io.jsonwebtoken:jjwt-jackson:0.11.2")
-//    implementation("com.nimbusds:nimbus-jose-jwt:9.10")
+
+    // Micronaut Security JWT
+    implementation("io.micronaut.security:micronaut-security-jwt")
+    implementation("io.micronaut.security:micronaut-security-aot")
+
+    // JSON Web Token (JWT) support
+    implementation("io.jsonwebtoken:jjwt-api:0.11.2")
+    implementation("io.jsonwebtoken:jjwt-impl:0.11.2")
+    implementation("com.nimbusds:nimbus-jose-jwt:9.10")
+    runtimeOnly("io.jsonwebtoken:jjwt-jackson:0.11.2")
 
     implementation("org.slf4j:jcl-over-slf4j")
     runtimeOnly("org.slf4j:slf4j-simple")
